
/*
 * 本代码由cfgtool工具生成，请勿手动修改
 */

syntax = "proto3";

package universal;

option go_package = "universal/common/pb";

enum NodeType {
  NodeTypeBegin  = 0;  // 节点类型-begin
  NodeTypeGate   = 1;  // 节点类型-Gate
  NodeTypeMatch  = 2;  // 节点类型-Match
  NodeTypeRoom   = 3;  // 节点类型-Room
  NodeTypeDb     = 4;  // 节点类型-Db
  NodeTypeBuild  = 5;  // 节点类型-Build
  NodeTypeGm     = 6;  // 节点类型-Gm
  NodeTypeGame   = 7;  // 节点类型-Game
  NodeTypeEnd    = 8;  // 节点类型-End
  NodeTypeClient = 9;  // 节点类型-Client
}
